<resources>
    <string name="app_name">E-Bazar</string>
    <string name="or">- - - - - - - - - - - - - - Or - - - - - - - - - - - - - - </string>
    <string name="sign_in">Sign in</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="sign_In">SIGN IN</string>
    <string name="username">UserName</string>
    <string name="enter_password">Enter password</string>
    <string name="don_t_you_have_account">Don\'t you have account ?</string>
    <string name="sign_up_now">Sign up Now!</string>
    <string name="confirm_password">Confirm password</string>
    <string name="facebook_app_id">777344033385126</string>
    <string name="fb_login_protocol_scheme">fb777344033385126</string>
    <string name="facebook_client_token">56789</string>
    <string name="sign_in_now">Sign in now!</string>
    <string name="title_activity_deshboard">Deshboard</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="orderd">Orderd</string>
    <string name="profile">Profile</string>
    <string name="support">Support</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="rack_sale_of_the_month">BACK SALE OF THE MONTH</string>
    <string name="featured_collection">Featured Collection</string>
    <string name="hello_apple">hello apple</string>
    <string name="view_all"><![CDATA[View All >]]></string>
    <string name="featured_product">Featured product</string>
    <string name="Blogs">blog</string>
    <string name="textview">TextView</string>


</resources>