<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bakground"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/login_to_your_account"
        android:textColor="#DAD2D2"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="164dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">


        <Button
            android:id="@+id/SinginM"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="190dp"
            android:layout_marginEnd="40dp"
            android:layout_weight="1"
            android:backgroundTint="#7F44E8"
            android:text="@string/sign_In"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="8dp" />

        <EditText
            android:id="@+id/UserNameM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:drawableStart="@drawable/user01"
            android:drawablePadding="20dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="#857C7C" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="#00BCD4"
            app:endIconTint="#636060"
            app:helperTextEnabled="false"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#7C7A7A">

            <EditText
                android:id="@+id/passM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="20dp"
                android:background="@null"
                android:backgroundTint="@color/white"
                android:drawableStart="@drawable/pass"
                android:drawablePadding="20dp"
                android:ems="10"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="#857C7C"
                android:textSize="18sp"
                app:passwordToggleEnabled="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="260dp"
            android:gravity="center"
            android:text="@string/or"
            android:textColor="#756C6C" />

        <ImageButton
            android:id="@+id/facebook"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="300dp"
            android:layout_marginBottom="60dp"
            android:background="@null"
            android:foregroundGravity="fill_horizontal|center_vertical|center"
            android:scaleType="fitStart"
            android:src="@drawable/fb"
            android:visibility="gone"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/googlelogin"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="200dp"
            android:layout_marginTop="300dp"
            android:layout_marginBottom="60dp"
            android:background="@null"
            android:foregroundGravity="fill_horizontal|center_vertical|center"
            android:scaleType="fitStart"
            android:src="@drawable/google"
            tools:ignore="SpeakableTextPresentCheck" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/SinginR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="60dp"
        android:clickable="true"
        android:text="@string/sign_up_now"
        android:textColor="#2844E4"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.304"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="1dp"
        android:text="@string/don_t_you_have_account"
        android:textColor="#B6AEAE"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/SinginR"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.304" />


</androidx.constraintlayout.widget.ConstraintLayout>