<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bakground"
    tools:context=".Registration">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="Sign up"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="Create a new account "
            android:textColor="#E3D7D7"
            android:textSize="16sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:background="#FFFFFF"
            android:backgroundTint="#FFFFFF"
            app:cardCornerRadius="20dp"
            app:cardElevation="20dp">

            <EditText
                android:id="@+id/UserNameM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:drawableStart="@drawable/user01"
                android:drawablePadding="20dp"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textColorHint="#857C7C" />

            <EditText

                android:id="@+id/EmailR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="110dp"
                android:layout_marginEnd="20dp"
                android:drawableStart="@drawable/email"
                android:drawablePadding="20dp"
                android:ems="10"
                android:hint="Email"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textColorHint="#857C7C" />

            <EditText

                android:id="@+id/PhoneR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="170dp"
                android:layout_marginEnd="20dp"
                android:drawableStart="@drawable/phone"
                android:drawablePadding="20dp"
                android:ems="10"
                android:maxLength="10"
                android:hint="Phone number"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textColorHint="#857C7C" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="#00BCD4"
                app:endIconTint="#636060"
                app:helperTextEnabled="false"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="#7C7A7A">

                <EditText
                    android:id="@+id/passM"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="230dp"
                    android:layout_marginEnd="20dp"
                    android:background="@null"
                    android:maxLength="8"
                    android:backgroundTint="@color/white"
                    android:drawableStart="@drawable/pass"
                    android:drawablePadding="20dp"
                    android:ems="10"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="#857C7C"
                    android:textSize="18sp"
                    app:passwordToggleEnabled="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                app:boxStrokeColor="#00BCD4"
                app:endIconTint="#636060"
                app:helperTextEnabled="false"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="#7C7A7A">

                <EditText
                    android:id="@+id/confirmPassR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="290dp"
                    android:layout_marginEnd="20dp"
                    android:backgroundTint="@color/white"
                    android:drawableStart="@drawable/pass"
                    android:drawablePadding="20dp"
                    android:ems="10"
                    android:hapticFeedbackEnabled="false"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="#857C7C"
                    android:textSize="18sp"
                    app:passwordToggleEnabled="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/SinginR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="220dp"
                android:layout_marginTop="390dp"
                android:layout_marginEnd="60dp"
                android:layout_marginBottom="40dp"
                android:clickable="true"
                android:text="@string/sign_in_now"
                android:textColor="#2844E4"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/cardView"
                app:layout_constraintVertical_bias="0.304"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="390dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="40dp"
                android:text="@string/don_t_you_have_account"
                android:textColor="#B6AEAE"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/SinginR"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView"
                app:layout_constraintVertical_bias="0.304" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/SignupR"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="#4057DC"
            android:gravity="center"
            android:shadowRadius="20.0"
            android:text="SIGN UP"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:cornerRadius="10dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>